# qualidade-de-software

./: .gitignore  README.md
.github/workflows/: quality.yml
artefatos/evidencias/: .gitkeep
docs/: aula-02-atributo-qualidade.md  aula-03-diagnostico-qa.md  aula-04-estrategia-inicial-testes.md  aula-05-testes-funcionais-estruturais.md  aula-06-testes-praticos.md  aula-09-testes-unitarios-tdd.md  aula-10-testes-funcionais-automatizados.md  aula-12-bdd-automacao-comportamento.md  aula-14-qualidade-de-processo.md  aula-15-modelos-de-maturidade.md  aula-16-qualidade-metodologias-ageis.md  aula-17-integracao-continua-qualidade.md
src/aula-09-testes-unitarios-tdd/: pyproject.toml
src/aula-09-testes-unitarios-tdd/localeats/: __init__.py  desconto.py  entrega.py  pedido.py
src/aula-09-testes-unitarios-tdd/tests/: test_desconto.py  test_entrega.py  test_pedido.py
src/aula-10-testes-funcionais-automatizados/: pyproject.toml
src/aula-10-testes-funcionais-automatizados/pages/: __init__.py  restaurantes_page.py
src/aula-10-testes-funcionais-automatizados/tests/: test_restaurantes.py
src/aula-12-bdd-automacao-comportamento/: pyproject.toml
src/aula-12-bdd-automacao-comportamento/features/: busca_restaurantes.feature
src/aula-12-bdd-automacao-comportamento/tests/: test_busca_restaurantes.py
src/aula-17-integracao-continua-qualidade/: pyproject.toml
src/aula-17-integracao-continua-qualidade/localeats_ci/: __init__.py  pedido.py
src/aula-17-integracao-continua-qualidade/tests/: test_pedido.py
