[project]
name = "aula-12-bdd-automacao-comportamento"
version = "0.1.0"
description = "Cenarios BDD do LocalEats com pytest-bdd e Playwright."
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.50.0",
    "pytest>=8.0.0",
    "pytest-bdd>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
